feat: added task-api - function createCustomTask
