# models/task.js
@@ -1,9 +1,10 @@
+// Core Mongoose
 const { model, Schema } = require('mongoose');
 
 const taskSchema = new Schema({
-	title: String,
-	reward: Number,
-	imageUrl: String,
+	title: { type: String, required: true },
+	reward: { type: Number, required: true },
+	imageUrl: { type: String, required: false },
 	days: [{ date: String, isActive: Boolean, isCompleted: Boolean }],
 });
 
