# swagger.json
@@ -1,7 +1,7 @@
 {
 	"openapi": "3.0.1",
 	"info": {
-		"version": "1.2.0",
+		"version": "1.3.0",
 		"title": "KidsLike API docs",
 		"description": "API documentation for GoIT FS-36 group project 'KidsLike'.  [Backend github repository](https://github.com/IgorSapko/KidsLike_backEnd)",
 		"license": {
@@ -22,6 +22,10 @@
 		{
 			"name": "Auth",
 			"description": "Authorization endpoints"
+		},
+		{
+			"name": "Task",
+			"description": "Tasks endpoints"
 		}
 	],
 	"paths": {
@@ -118,6 +122,53 @@
 					},
 					"400": {
 						"description": "No token provided",
+						"content": {}
+					},
+					"401": {
+						"description": "Bearer auth failed",
+						"content": {}
+					},
+					"404": {
+						"description": "Invalid user",
+						"content": {}
+					}
+				}
+			}
+		},
+		"/api/task": {
+			"post": {
+				"tags": ["Task"],
+				"summary": "Create custom task",
+				"security": [
+					{
+						"Bearer": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"description": "Task's object",
+					"required": true,
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateTaskRequest"
+							}
+						}
+					}
+				},
+				"responses": {
+					"200": {
+						"description": "Successful operation",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CreateTaskResponse"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Bad request (invalid request body or no token provided)",
 						"content": {}
 					},
 					"401": {
@@ -369,6 +420,113 @@
 								]
 							}
 						}
+					}
+				}
+			},
+			"CreateTaskRequest": {
+				"type": "object",
+				"required": ["title", "reward"],
+				"properties": {
+					"title": {
+						"type": "string",
+						"description": "Task's title",
+						"example": "Task 1"
+					},
+					"reward": {
+						"type": "integer",
+						"description": "Task's reward",
+						"minimum": 0,
+						"example": 1
+					},
+					"taskAvatar": {
+						"type": "string",
+						"format": "binary",
+						"description": "Image file"
+					}
+				}
+			},
+			"CreateTaskResponse": {
+				"type": "object",
+				"properties": {
+					"id": {
+						"type": "string",
+						"description": "Task's id",
+						"example": "60312d4a9328064b7c18935f"
+					},
+					"title": {
+						"type": "string",
+						"description": "Task's title",
+						"example": "Task 1"
+					},
+					"reward": {
+						"type": "integer",
+						"description": "Task's reward",
+						"minimum": 0,
+						"example": 1
+					},
+					"imageUrl": {
+						"type": "string",
+						"description": "Task's image URL"
+					},
+					"days": {
+						"type": "array",
+						"description": "Task's days",
+						"items": {
+							"type": "object",
+							"description": "Day's task",
+							"properties": {
+								"date": {
+									"type": "string",
+									"description": "Day's date",
+									"example": "01-03-2021"
+								},
+								"isActive": {
+									"type": "boolean",
+									"description": "Task's active status"
+								},
+								"isCompleted": {
+									"type": "boolean",
+									"description": "Task's complete status"
+								}
+							}
+						},
+						"example": [
+							{
+								"date": "01-03-2021",
+								"isActive": false,
+								"isCompleted": false
+							},
+							{
+								"date": "02-03-2021",
+								"isActive": false,
+								"isCompleted": false
+							},
+							{
+								"date": "03-03-2021",
+								"isActive": false,
+								"isCompleted": false
+							},
+							{
+								"date": "04-03-2021",
+								"isActive": false,
+								"isCompleted": false
+							},
+							{
+								"date": "05-03-2021",
+								"isActive": true,
+								"isCompleted": false
+							},
+							{
+								"date": "06-03-2021",
+								"isActive": false,
+								"isCompleted": false
+							},
+							{
+								"date": "07-03-2021",
+								"isActive": true,
+								"isCompleted": true
+							}
+						]
 					}
 				}
 			},
